<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:parentTag="creations.rimov.com.chipit.ui.editor.MatPrevLayout"
      tools:layout_width="match_parent"
      tools:layout_height="match_parent">

    <Button
          android:id="@+id/btnAddMatPrev"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="@string/editor_btn_mat"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="@dimen/textsize_prompt_standard"
          android:background="@color/colorAccent"/>

    <include
          android:id="@+id/matPreviewImgLayout"
          layout="@layout/editor_material_image"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:visibility="gone"/>

    <creations.rimov.com.chipit.ui.custom.VideoLayout
          android:id="@+id/matPreviewVideoLayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:visibility="gone"/>

    <creations.rimov.com.chipit.ui.custom.AudioLayout
          android:id="@+id/matPreviewAudioLayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:visibility="gone"/>

</merge>