...
      xmlns:tools="http://schemas.android.com/tools"
      tools:parentTag="creations.rimov.com.chipit.ui.custom.PlaybackControls"
      tools:layout_width="match_parent"
      tools:layout_height="match_parent">

    <ImageButton
          android:id="@+id/btnPlaybackPlay"
          android:layout_width="@dimen/size_touch_standard_small"
          android:layout_height="0dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@id/playbackTimeCurrent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
...
