...
          android:layout_height="@dimen/size_touch_standard_reg"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/promptText"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:textSize="@dimen/textsize_prompt_standard"
              android:textColor="@color/colorPrimaryDark"
              android:background="@color/colorAccent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
          android:id="@+id/btnPromptTextSave"
          android:layout_width="@dimen/size_touch_standard_large"
          android:layout_height="@dimen/size_touch_standard_reg"
          android:gravity="center"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/btnPromptTextCancel"
          app:layout_constraintTop_toBottomOf="@id/promptTextParent"
...
